--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -125,6 +125,17 @@ body {
     position: relative;
 }
 
+.dev-design {
+    position: relative;
+    top: -3px;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 0;
+    padding: 0;
+    margin-top: 10;
+    position: relative;
+}
+
 .project-description-mobile {
     font-weight: 300;
     font-size: 15px;
